# service/UserService.js
@@ -5,6 +5,7 @@ const crypto = require('../lib/crypto.js');
 const userDao = require('../dao/UserDao.js');
 const {
     WrongPasswordError,
+    PasswordPolicyError,
     NotMatchedError,
 } = require('../utils/errors/errors.js');
 const user = require('../mongoose_models/user.js');
@@ -148,6 +149,30 @@ exports.updateUser = ({
         email,
         birth,
         grade,
+    });
+};
+
+/**
+ * 유저 비밀번호 변경
+ *
+ * @param {number} userIdx
+ * @param {string} prevPassword
+ * @param {string} newPassword
+ * @returns {}
+ **/
+exports.changePassword = async (userIdx, prevPassword, newPassword) => {
+    const user = await userDao.readByIdx(userIdx);
+    const dbPassword = crypto.decrypt(user.password);
+    if (dbPassword !== prevPassword) {
+        throw new WrongPasswordError();
+    }
+    if (dbPassword === newPassword) {
+        throw new PasswordPolicyError();
+    }
+    const password = crypto.encrypt(newPassword);
+    return userDao.update({
+        userIdx,
+        password,
     });
 };
 
